# symcc-static-opt

./: .devcontainer.json  .gitignore  CMakeLists.txt
compiler/: Main.cpp  Pass.cpp  Pass.h  Symbolizer.cpp  Symbolizer.h
compiler/analyze/: AnalyzePass.cpp  AnalyzePass.h
compiler/split/: SplitPass.cpp  SplitPass.h
